2008-08-10  Sanel <karijes@users.sourceforge.net>

	* src/Resource.cpp: Some E_RETURN_VAL_IF_FAILED addition

2008-08-09  Sanel <karijes@users.sourceforge.net>

	* ConfigEntry and ConfigSection classes are moved to Config.cpp

2008-08-08  Sanel <karijes@users.sourceforge.net>

	* Added edelib.pc.in and edelib-dbus.pc.in for pkg-config, replacing
	edelib-config which is pretty broken
	* Modified Jamfile so above files gets installed and removed edelib-config
	installing
	* Trim blank characters from tokenized values in Directories key
	(IconTheme)

2008-08-07  Sanel <karijes@users.sourceforge.net>

	* Added icon_chooser() that can use loaded icon theme

2008-08-06  Sanel <karijes@users.sourceforge.net>

	* Fixed a bug in Resource when malformed data is tried to be read
	* Added test for that bug too
	* Added get_all() in IconTheme so one can get all icon filenames with
	given size and context in current theme
	* Also added theme_name() to get the name of currently used theme

2008-08-02  Sanel <karijes@users.sourceforge.net>

	* Added file_executable with tests
	* EdbusConnection.cpp some debug output got newlines
	* Changed way register_object() in EdbusConnection behaves; now if none
	object was registered, all data can be listened; otherwise only for that
	object
	* TODO entry
	* Better matching interface for signals and method in EdbusConnection,
	hopefully

2008-07-29  Sanel <karijes@users.sourceforge.net>

	* Added test/perf/stringtok.ss as comparison against chicken scheme
	compiler

2008-07-14  Sanel <karijes@users.sourceforge.net>

	* Removed edelib-dbus-xml2cpp
	* Made edelib-dbus-introspect compileable

2008-06-16  Sanel <karijes@users.sourceforge.net>

	* Fixed a typo with __EDBUSMESSAGE_H__ in EdbusMessage.h

2008-06-04  Sanel <karijes@users.sourceforge.net>

	* Fixed bool value checks in Config class (thanks to Vedran note)
	* Added that to tests too

2008-05-10  Sanel <karijes@users.sourceforge.net>
	